#2258 Code formatting improvements